--- a/public/fonts/fonts.css
+++ b/public/fonts/fonts.css
@@ -6,17 +6,22 @@
 }
 
 @font-face {
-    font-family: 'Greycliff CF Regular';
-    src: url('./GreycliffCFRegular.woff2') format('woff2');
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
+    font-family: "Neutro";
+    src: url("./Neutro-ExtraBold.woff2") format("woff2");
+    /*font-weight: normal;*/
+    /*font-style: normal;*/
 }
 
 @font-face {
-    font-family: 'Intro';
-    src: url('./bk.woff2') format('woff2');
-    /*font-weight: 400;*/
+    font-family: "Cunia";
+    src: url("./cunia.woff2") format("woff2");
+    /*font-weight: normal;*/
     /*font-style: normal;*/
-    /*font-display: swap;*/
+}
+
+@font-face {
+    font-family: "Panipuri";
+    src: url("./Panipuri.woff2") format("woff2");
+    /*font-weight: normal;*/
+    /*font-style: normal;*/
 }
