--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');
 
+html {
+    scroll-behavior: smooth;
+}
+
 h1, h3, h5 {
     /*font-family: 'Akira Expanded', sans-serif;*/
     font-family: 'Plus Jakarta Sans', sans-serif;
@@ -742,6 +746,10 @@ iframe .watermark {
     margin-top: 23px;
 }
 
+nav svg:hover {
+    fill: #5765f1;
+}
+
 /* MOBILE */
 
 @media screen and (min-width: 992px) {
@@ -966,7 +974,7 @@ iframe .watermark {
 @media screen and (max-width: 380px) {
     .main-heading {
         font-size: 3rem;
-        margin-top: 30px;
+        /*margin-top: 30px;*/
     }
 }
 
@@ -1016,4 +1024,35 @@ iframe .watermark {
     .footer-img {
         background-position-y: 17px;
     }
+}
+
+@media screen and (max-width: 992px) {
+    .nav-contact-btn-mob {
+        margin-bottom: 20px!important;
+    }
+}
+
+/* Privacy */
+.privacy {
+    font-family: Arial, serif !important;
+}
+
+.privacy h1, .privacy h2 {
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.privacy h1 {
+    font-siZe: 26px;
+}
+
+.privacy h2 {
+    font-siZe: 19px;
+    margin: 48px 0 16px;
+}
+
+.privacy p {
+    font-family: Arial, serif !important;
+    font-size: 14px;
+    line-height: 115%;
 }
