--- a/src/App.css
+++ b/src/App.css
@@ -1138,3 +1138,9 @@ nav svg:hover {
         border-radius: 10px;
     }
 }
+
+@media screen and (max-width: 549px) {
+    .scientifically-neutro {
+        font-size: 17px;
+    }
+}
